# rtwalk

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  history.txt  shell.nix  todo.md
.github/workflows/: rust.yml
rtwalk.db/: 000060.sst  000068.sst  IDENTITY  MANIFEST-000064
scripts/: db.sh
src/: config.rs  error.rs  lib.rs  main.rs  state.rs  template.rs  utils.rs
src/gql/: comments.rs  forums.rs  mod.rs  posts.rs  users.rs
src/gql/resolvers/: comments.rs  forums.rs  mod.rs  page.rs  posts.rs  users.rs
src/models/: comment.rs  file.rs  forum.rs  mod.rs  post.rs  user.rs
templates/: email_verify.html
tests/: tests.rs  utils.rs
