[package]
name = "rtwalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "7.0.2"
async-graphql-axum = "7.0.2"
axum = { version = "0.7.4", features = ["ws"], default-features = false }
bytes = "1.5.0"
mongodm = "0.9.2"
opendal = { version = "0.45.0", features = ["services-fs"], default-features = false }
serde = { version = "1.0.197", features = ["derive"], default-features = false }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"], default-features = false }
