[package]
name = "rtwalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
argon2 = "0.5.3"
async-graphql = { version = "7.0.2", features = ["apollo_tracing", "dataloader"] }
async-graphql-axum = "7.0.2"
axum = { version = "0.7.4", features = ["ws"], default-features = false }
bytes = "1.5.0"
chrono = "0.4.37"
cliparser = "0.1.2"
cuid2 = "0.1.2"
dotenvy = "0.15.7"
opendal = { version = "0.45.0", features = ["services-fs"], default-features = false }
rand = "0.8.5"
rustis = "0.12.8"
rusty_paseto = "0.6.1"
sailfish = "0.8.3"
serde = { version = "1.0.197", features = ["derive"], default-features = false }
serde_json = "1.0.114"
surrealdb = { version = "1.2.0", features = ["kv-mem"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"], default-features = false }
tower-cookies = { version = "0.10.0", features = ["signed"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zxcvbn = "2.2.2"
