[package]
name = "rtwalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
argon2 = "0.5.3"
async-graphql = { version = "7.0.13", features = ["apollo_tracing", "dataloader"] }
async-graphql-axum = "7.0.13"
axum = { version = "0.7.9", features = ["ws"], default-features = false }
bytes = "1.9.0"
chrono = "0.4.39"
cliparser = "0.1.2"
cuid2 = "0.1.3"
dotenvy = "0.15.7"
lettre = { version = "0.11.11", features = ["tokio1", "tokio1-native-tls"] }
opendal = { version = "0.50.2", features = ["services-fs"], default-features = false }
rand = "0.8.5"
rustis = "0.13.3"
rusty_paseto = "0.7.2"
sailfish = { version = "0.9.0", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"], default-features = false }
serde_json = "1.0.134"
surrealdb = { version = "2.1.4", features = ["kv-mem"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"], default-features = false }
tower-cookies = { version = "0.10.0", features = ["signed"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zxcvbn = "3.1.0"
